# test-effective

./: README.md
list-node/: CMakeLists.txt  inlet.in  list-node.cpp  list.cpp  list.h
